test/bad/functions/void04.px

func f() [Void] def
    return []

f()
